[project]
name = "practice-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "VsevolodMartynov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
python-docx = ">=1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
